Fix flicker on scroll

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -28,11 +28,8 @@
 }
 
 @mixin dark-colors {
-  --background-color: linear-gradient(
-    hsla(239, 50%, 20%, 1),
-    var(--purple-50) 80%,
-    hsla(303, 99%, 40%, 1)
-  );
+  --background-color: fixed
+    linear-gradient(hsla(239, 50%, 20%, 1), var(--purple-50) 80%);
   --link-color: var(--aqua-84);
   --body-color: white;
   --header-color: var(--magenta-90);
@@ -66,6 +63,10 @@
   --chroma-comment: hsl(225, 27%, 80%);
   --chroma-name: hsl(135, 94%, 65%);
   --body-font-weight: 'wght' 350;
+  --footer-background: linear-gradient(
+    hsla(0, 0%, 100%, 0) 40%,
+    hsla(303, 99%, 40%, 1)
+  );
 }
 
 :root {
